<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_you_theme"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/bright_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#DADADA"
        android:text="@string/bright_theme"
        android:textSize="12sp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/dark_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

</LinearLayout>